# CPF_validator

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml
app/: cpf_validator.py  main.py
docs/: index.md
search/: search_index.json
tests/: test_CPF_validator.py  test_cpf_validator.py
