[tool.poetry]
name = "cpf-validator"
version = "0.1.0"
description = ""
authors = ["Eduardo Adame <eadamesalles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.2"
mkdocs = "^1.5.3"
mkdocstrings = {version = "^0.24.0", extras = ["python"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
